packages/compiler-rs/tests/snapshots/transform_element__dynamic_props_before_static_prop.snap
---
source: tests/transform_element.rs
expression: code
---
import { renderEffect as _renderEffect, setDynamicProps as _setDynamicProps, template as _template } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  _renderEffect(() => _setDynamicProps(n0, [obj, { id: "foo" }], true));
  return n0;
})();
