packages/compiler-rs/tests/snapshots/transform_element__props_merging_event_handlers.snap
---
source: tests/transform_element.rs
expression: code
---
_delegateEvents("click");
import { delegate as _delegate, delegateEvents as _delegateEvents, template as _template, withKeys as _withKeys } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  _delegate(n0, "click", _withKeys(a, ["foo"]));
  _delegate(n0, "click", _withKeys(b, ["bar"]));
  return n0;
})();
