packages/compiler-rs/tests/snapshots/transform_element__props_merging_style.snap
---
source: tests/transform_element.rs
expression: code
---
import { setStyle as _setStyle, template as _template } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  _setStyle(n0, ["color: green", { color: "red" }]);
  return n0;
})();
